--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/EMS
+spring.datasource.username=root
+spring.datasource.password=@dolly2003
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+
